--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="stars-bg" id="stars-bg"></div>
   <div class="container">
-    <h1>RainBet Leaderboard <span class="streamer">Tzbetz</span></h1>
+    <h1>Rainbet Leaderboard <span class="streamer">Tzbetz</span></h1>
     <div class="countdown" id="countdown"></div>
     <div class="table-wrapper">
       <table id="leaderboard">
