--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RainBet Leaderboard | TonyZ</title>
+  <title>Tzbetz | RainBet Leaderboard</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="header">
-    <h1>RainBet Leaderboard</h1>
+    <div class="owner-info">
+      <div class="owner-circle">
+        <img src="owner.jpg" alt="TonyZ" />
+      </div>
+      <h1>RainBet Leaderboard</h1>
+    </div>
     <span id="status-label" class="status">Checking...</span>
   </header>
 
-  <section class="hero">
-    <img src="stream-preview.jpg" alt="TonyZ Stream" class="hero-image" />
-    <h2>🏆 Daily, Weekly & Monthly Giveaways</h2>
-    <p>Stay active, earn rewards & claim your badges!</p>
-    <a href="https://kick.com/tzbetz" class="cta">Watch TonyZ Live</a>
-  </section>
+  <div class="welcome-banner">
+    <h2>👑 Welcome to Tzbetz Official Website</h2>
+    <p>Hosted by TonyZ – Your gateway to rewards, streams & leaderboard glory!</p>
+  </div>
 
   <section class="dashboard">
     <a href="leaderboard.html" class="dash-card">🏆 View Leaderboard</a>
