--- a/index.html
+++ b/index.html
@@ -3,30 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tzbetz | RainBet Leaderboard</title>
+  <title>Welcome to Tzbetz Official Website</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="header">
     <div class="owner-info">
       <div class="owner-circle">
-        <img src="owner.jpg" alt="TonyZ" />
+        <img src="icons/owner.jpg" alt="TonyZ" />
       </div>
-      <h1>RainBet Leaderboard</h1>
+      <div>
+        <h1>👑 Welcome to Tzbetz Official Website</h1>
+        <p class="hosted-by">Hosted by TonyZ</p>
+      </div>
     </div>
     <span id="status-label" class="status">Checking...</span>
   </header>
 
-  <div class="welcome-banner">
-    <h2>👑 Welcome to Tzbetz Official Website</h2>
-    <p>Hosted by TonyZ – Your gateway to rewards, streams & leaderboard glory!</p>
-  </div>
-
   <section class="dashboard">
-    <a href="leaderboard.html" class="dash-card">🏆 View Leaderboard</a>
-    <a href="badges.html" class="dash-card">🎖️ Badge Info</a>
-    <a href="giveaways.html" class="dash-card">🎰 Prize Schedule</a>
-    <a href="#signup" class="dash-card">👤 Join Now</a>
+    <a href="leaderboard.html" class="dash-card">🏆 <span>RainBet Leaderboard</span></a>
+    <a href="badges.html" class="dash-card">🎖️ <span>Badge Info</span></a>
+    <a href="giveaways.html" class="dash-card">🎰 <span>Prize Schedule</span></a>
+    <a href="#signup" class="dash-card">👤 <span>Join Now</span></a>
   </section>
 
   <section class="follow-tonyz">
@@ -50,6 +48,10 @@
 
     <p class="tagline">Let’s run it up! 💸🔥</p>
   </section>
+
+  <footer class="site-footer">
+    <p>Developed by Ark</p>
+  </footer>
 
   <script src="scripts.js"></script>
 </body>
