Remove emoji from header and enlarge welcome text for desktop

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="logo-container">
       <img src="icons/owner.jpg" alt="TonyZ" />
     </div>
-    <h1>👑 Welcome to Tzbetz Official Website</h1>
+    <h1>Welcome to Tzbetz Official Website</h1>
     <p class="hosted-by">Hosted by TonyZ</p>
     <span id="status-label" class="status">Checking...</span>
   </header>
