Leaderboard UI and feature improvements: consistent back button, spacing, CSS fixes, and visual enhancements

--- a/badges.html
+++ b/badges.html
@@ -142,4 +142,14 @@
     <a href="index.html" class="back-button">⬅️ Back to Main Page</a>
   </div>
 </body>
+
+    <footer style="margin-top: 2.5rem; padding: 1.2rem 0; background: #181818; color: #FFD600; font-size: 1rem; text-align: center; border-radius: 0 0 18px 18px; box-shadow: 0 0 8px #FFD60022;">
+      <div style="max-width: 900px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: center; gap: 2.2rem; align-items: center;">
+        <a href="terms.html" style="color:#FFD600; text-decoration:underline; font-weight:600;">📜 Terms & Conditions</a>
+        <a href="mailto:support@tzbetz.com" style="color:#FFD600; text-decoration:underline; font-weight:600;">Contact Us</a>
+        <a href="mailto:business@tzbetz.com" style="color:#FFD600; text-decoration:underline; font-weight:600;">Business Contact</a>
+        <a href="help.html" style="color:#FFD600; text-decoration:underline; font-weight:600;">Help</a>
+        <a href="https://rainbet.com/?r=tzbetz" target="_blank" style="color:#FFD600; text-decoration:underline; font-weight:600;">Recommended: Rainbet</a>
+      </div>
+    </footer>
 </html>
