--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
 
   <!-- Footer -->
   <footer class="site-footer">
-    <p>Developed by Ark</p>
+    <div style="max-width: 900px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: center; gap: 2.2rem; align-items: center;">
+      <a href="terms.html" style="color:#FFD600; text-decoration:underline; font-weight:600;">📜 Terms & Conditions</a>
+      <a href="mailto:support@tzbetz.com" style="color:#FFD600; text-decoration:underline; font-weight:600;">Contact Us</a>
+      <a href="mailto:business@tzbetz.com" style="color:#FFD600; text-decoration:underline; font-weight:600;">Business Contact</a>
+      <a href="help.html" style="color:#FFD600; text-decoration:underline; font-weight:600;">Help</a>
+    </div>
   </footer>
 
   <script src="scripts.js"></script>
