UI updates: leaderboard help button centered, rainbet logo animation, consistent help sections, and other improvements

--- a/badges.html
+++ b/badges.html
@@ -108,6 +108,7 @@
   </style>
 </head>
 <body>
+  <div class="rain-bubbles-bg"></div>
   <div class="badge-info-container">
     <h1>🏅 Kick Stream Badges</h1>
     <p style="color:#aaa; font-size: 0.9rem; margin-top: -0.5rem;">Earn these badges by engaging with the stream and community</p>
@@ -139,6 +140,11 @@
     🌀 Exclusive Wheel Spin Entry — Only OG and VIP badge holders can spin the Wheel of Entry.<br>
     🎁 Plus, many upcoming giveaways reserved just for OGs and VIPs!</p>
 
+    <div class="footer-link" style="margin-top:2.5rem;">
+      📌 Need help?
+      <br>
+      <a href="https://discord.gg/bp8BgsvxrR" target="_blank" style="display:inline-block; margin-top:8px; background:#FFD600; color:#222; font-weight:700; padding:0.6rem 1.3rem; border-radius:10px; text-decoration:none; box-shadow:0 0 8px #FFD60088;">Create a ticket on Discord</a>
+    </div>
     <a href="index.html" class="back-button">⬅️ Back to Main Page</a>
   </div>
 </body>
