--- a/terms.html
+++ b/terms.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="rain-bubbles-bg"></div>
   <header class="mobile-header">
     <div class="welcome-box">
       <img src="icons/owner.jpg" alt="Tzbetz Icon" class="tzbetz-icon" />
@@ -105,7 +106,11 @@
     </ul>
   </main>
   <footer class="site-footer">
-    <div style="text-align:center; margin:2.5rem 0 0 0;">
+    <div class="footer-link" style="text-align:center; margin:2.5rem 0 0 0;">
+      📌 Need help?
+      <br>
+      <a href="https://discord.gg/bp8BgsvxrR" target="_blank" style="display:inline-block; margin-top:8px; background:#FFD600; color:#222; font-weight:700; padding:0.6rem 1.3rem; border-radius:10px; text-decoration:none; box-shadow:0 0 8px #FFD60088;">Create a ticket on Discord</a>
+      <br><br>
       <a href="index.html" class="back-button" style="margin-bottom:2.5rem;">⬅️ Back to Main Page</a>
     </div>
     <div style="max-width: 900px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: center; gap: 2.2rem; align-items: center;">
